fix: remove image white space

--- a/css/styles.css
+++ b/css/styles.css
@@ -265,14 +265,16 @@ nav a:hover::after {
   box-shadow: var(--box-shadow);
   border: 4px solid var(--medium-gray);
   position: relative;
+  line-height: 0;
 }
 
 .about-image img {
   width: 100%;
-  height: 100%;
+  height: auto;
   object-fit: cover;
   display: block;
   border-radius: calc(var(--border-radius) - 4px);
+  vertical-align: bottom;
 }
 
 .about-text {
